在《最优化理论》里增加了“最小二乘法”的部分

--- a/CH02_最优化理论.ipynb
+++ b/CH02_最优化理论.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**最优化理论**\n",
     "\n",
-    "很多机器学习算法最后都归结为求解最优化问题。最优化问题一般都是求解极大值或者极小值，对于连续可微函数，在数学上有明确的[求解方法](https://blog.csdn.net/lanchunhui/article/details/51371444)。**实际问题中，函数本身可能过于复杂，比如包含指数函数、对数函数以及根号等，使得求解偏导数等于0的方程组不是那么容易，所以我们只能通过迭代的方法求近似解，称为数值计算。**\n",
+    "很多机器学习算法最后都归结为求解最优化问题。最优化问题一般都是求解极大值或者极小值，对于连续可微函数，在数学上有明确的[求解方法](https://blog.csdn.net/lanchunhui/article/details/51371444)。**实际问题中，函数本身可能过于复杂，比如包含指数函数、对数函数以及根号等，使得求解偏导数等于0的类似$\\mathbf{A}\\mathbf{x}=\\mathbf{b}$的方程组不是那么容易(可能无解或者计算成本过高)，所以我们只能通过迭代的方法求近似解，称为数值计算。**\n",
     "\n",
     "迭代法从一个初始点 $X_{0}$ 开始，通过某个映射 h 从 $X_{k}$ 移动到下一个点 $X_{k+1}$ ，构造数列 $\\{X_k\\}_{k\\in (1,n)}$，直到收敛到梯度为0的点处。即有下面的极限成立：\n",
     "\n",
@@ -16,6 +16,234 @@
     "一般会利用一阶导数信息即梯度或者二阶导数信息即Hessian矩阵。迭代法的核心是得到迭代公式：\n",
     "\n",
     "$$x_{k+1} = h(x_k)$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 最小二乘法与投影矩阵"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 解的个数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在线性回归中，问题会归结于求解\n",
+    "\n",
+    "$$\\mathbf{A}\\mathbf{x}=\\mathbf{b}$$\n",
+    "\n",
+    "其中 $\\mathbf{A}\\in R^{m\\times n},b\\in R^m$。 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们知道：\n",
+    "\n",
+    "* 如果系数矩阵的秩小于增广矩阵的秩，即 $rank (\\mathbf{A}) < rank (\\mathbf{A},\\mathbf{b})$ 时，矩阵无解；\n",
+    "\n",
+    "\n",
+    "* 如果系数矩阵的秩等于增广矩阵的秩并且列满秩，即 $rank (\\mathbf{A}) = rank (\\mathbf{A},\\mathbf{b})=n$ 时，矩阵有唯一解；\n",
+    "\n",
+    "\n",
+    "* 如果系数矩阵的秩等于增广矩阵的秩并且非列满秩，即 $rank (\\mathbf{A}) = rank (\\mathbf{A},\\mathbf{b})< n$,矩阵有无穷多个解。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 最小二乘法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面我们来考虑下\n",
+    "\n",
+    "$$\\mathbf{A}\\mathbf{x}=\\mathbf{b}$$\n",
+    "\n",
+    "其中 $\\mathbf{A}\\in R^{m\\times n},b\\in R^m, m \\geq n,rank (\\mathbf{A})=n,b\\notin R(\\mathbf{A})$ 的情形。 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为 $b\\notin R(\\mathbf{A})$,所以求解该方程是无解的。求解该方程就变成下面的问题：\n",
+    "\n",
+    "$$\\min_{\\mathbf{x}}\\Vert\\mathbf{A}\\mathbf{x}-\\mathbf{b}\\Vert^2$$\n",
+    "\n",
+    "是一个线性最小二乘问题。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果向量 $\\mathbf{x}^\\ast$ 使得 $\\Vert\\mathbf{A}\\mathbf{x}-\\mathbf{b}\\Vert^2$ 最小，即对所有的 $\\mathbf{x}\\in R^n$，有\n",
+    "\n",
+    "$$\\Vert\\mathbf{A}\\mathbf{x}-\\mathbf{b}\\Vert^2 \\geq \\Vert\\mathbf{A}\\mathbf{x}^\\ast-\\mathbf{b}\\Vert^2$$\n",
+    "\n",
+    "则称 $\\mathbf{x}^\\ast$ 是 $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$ 的最小二乘解。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "下面的结论来自Edwin K.P.Chong 等著的《最优化导论》的第3章(P21)：\n",
+    "\n",
+    "* 矩阵 $\\mathbf{A}\\in R^{m\\times n}$ 的值域空间或像空间记为\n",
+    "\n",
+    "$$ R(\\mathbf{A}) \\triangleq \\{\\mathbf{A}\\mathbf{x}:\\mathbf{x}\\in R^n\\}$$;\n",
+    "\n",
+    "* 矩阵 $\\mathbf{A}\\in R^{m\\times n}$ 的零空间或核记为\n",
+    "\n",
+    "$$N(\\mathbf{A}) \\triangleq \\{\\mathbf{x}\\in R^n:\\mathbf{A}\\mathbf{x}=\\mathbf{0}\\}$$;\n",
+    "\n",
+    "\n",
+    "* **结论：** 对于任意矩阵 $\\mathbf{A}$,总有 $R(\\mathbf{A})^{\\bot}=N(\\mathbf{A}^{\\bot})$ 和 $N(\\mathbf{A})^{\\bot}=R(\\mathbf{A}^{\\bot})$。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "下面的三个定理来自 Edwin K.P.Chong 等著的《最优化导论》的第12章(P151)：\n",
+    "\n",
+    "* **结论1**： $\\mathbf{A}\\in R^{m\\times n}, m \\geq n,rank (\\mathbf{A})=n$，则有 $rank(A)=n\\Leftrightarrow rank (\\mathbf{A}^T\\mathbf{A})=n$。\n",
+    "\n",
+    "\n",
+    "* **结论2：** 能够最小化 $\\Vert\\mathbf{A}\\mathbf{x}-\\mathbf{b}\\Vert^2$ 的向量 $\\mathbf{x}^\\ast$ 具有唯一性，可通过求解方程组 $\\mathbf{A}^T\\mathbf{A}\\mathbf{x}=\\mathbf{A}^T\\mathbf{b}$得到，即 \n",
+    "\n",
+    "$$\\mathbf{x}^\\ast = (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{b}$$\n",
+    "\n",
+    "\n",
+    "* **结论3：** 如果向量 $\\mathbf{h}\\in R(\\mathbf{A})$ 使得 $\\mathbf{h}-\\mathbf{b}$ 正交于子空间 $R(\\mathbf{A})$，那么 $$\\mathbf{h}=\\mathbf{A}\\mathbf{x}^\\ast=\\mathbf{P}\\mathbf{b}$$\n",
+    "\n",
+    "对应的 $\\mathbf{x}^\\ast$ 为：\n",
+    "\n",
+    "$$\\mathbf{x}^\\ast = (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{b}$$\n",
+    "\n",
+    "其中 $\\mathbf{P} = \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T$ 是向量 $\\mathbf{b}$ 到值空间 $R(\\mathbf{A})$ 的正交投影算子。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**对结论3的证明：**\n",
+    "\n",
+    "对于向量 $\\mathbf{h}\\in R(\\mathbf{A})$，存在 $\\mathbf{x}^\\ast\\in R^m$ 使得 $\\mathbf{h}=\\mathbf{A}\\mathbf{x}^\\ast$。\n",
+    "\n",
+    "由 $\\mathbf{h}-\\mathbf{b}$ 正交于子空间 $R(\\mathbf{A})$ 知\n",
+    "\n",
+    "$$\\mathbf{h}-\\mathbf{b} \\in R(\\mathbf{A})^{\\bot}=N(\\mathbf{A}^T)$$\n",
+    "\n",
+    "所以有：\n",
+    "\n",
+    "$$\\mathbf{A}^T(\\mathbf{h}-\\mathbf{b})=\\mathbf{A}^T(\\mathbf{A}\\mathbf{x}^\\ast-\\mathbf{b})=\\mathbf{0}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "即\n",
+    "\n",
+    "$$\\mathbf{A}^T\\mathbf{A}\\mathbf{x}^\\ast = \\mathbf{A}^T\\mathbf{b}$$\n",
+    "\n",
+    "由 $rank(\\mathbf{A})=n$ 可知 $rank(\\mathbf{A}^T\\mathbf{A})=n$，也就是说 $\\mathbf{A}^T\\mathbf{A}$ 是可逆的，所以：\n",
+    "\n",
+    "$$\\mathbf{x}^\\ast = (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{b}$$\n",
+    "\n",
+    "$$\\mathbf{h} = \\mathbf{A}\\mathbf{x}^\\ast = \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{b}=\\mathbf{P}\\mathbf{b}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 几何观点"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='figure/touying0.jpg' width='500' height='400' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "秩为 n 的矩阵 $\\mathbf{A}\\in R^{m\\times n}$ 所有列张成的子空间为 $\\mathbf{A}$ 的值域空间 $R(\\mathbf{A})$，是 $R^{m}$ 的一个 n 维子空间。\n",
+    "\n",
+    "当 $\\mathbf{b}\\in R(\\mathbf{A})$ 时方程组才有精确解：\n",
+    "\n",
+    "* 当 $m=n$ 时，$\\mathbf{b}\\in R(\\mathbf{A})$ 总是成立的；\n",
+    "\n",
+    "* 当 $m > n$ 时，因为 子空间 $R(\\mathbf{A})$ 非常“薄”(“薄”的含义是：对于任意一个向量 $\\mathbf{x}\\in R^{m}$，其属于子空间 $R(\\mathbf{A})$ 的概率非常低)，所以 $\\mathbf{b}\\in R(\\mathbf{A})$ 的可能性比较小。\n",
+    "\n",
+    "综上可知，在 $m \\geq n$ 时从概率上讲方程 $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$ 有精确解的概率是比较低的。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "假设 $\\mathbf{b}$ 在 $R(\\mathbf{A})$ 之外，那么寻找最小二乘解 $\\Vert\\mathbf{A}\\mathbf{x}-\\mathbf{b}\\Vert^2 \\geq \\Vert\\mathbf{A}\\mathbf{x}^\\ast-\\mathbf{b}\\Vert^2$ 本质上是在 $R(\\mathbf{A})$ 上寻找向量 $\\mathbf{h}$ 使得 $\\Vert\\mathbf{b} - \\mathbf{h}\\Vert$ 最小。\n",
+    "\n",
+    "\n",
+    "从几何意义上看，向量 $\\mathbf{h}$ 应该使得 向量 $\\mathbf{e}=\\mathbf{b} - \\mathbf{h}$ 正交于子空间 $R(\\mathbf{A})$。换言之，此时向量 $\\mathbf{h}$ 为向量 $\\mathbf{b}$ 在 $R(\\mathbf{A})$ 上的正交投影向量。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 另一种获取最小二乘解的方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "构造目标函数\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "f(\\mathbf{x}) &=\\Vert\\mathbf{A}\\mathbf{x}-\\mathbf{b}\\Vert^2\\\\ \n",
+    "&=(\\mathbf{A}\\mathbf{x}-\\mathbf{b})^T(\\mathbf{A}\\mathbf{x}-\\mathbf{b})\\\\\n",
+    "&=\\frac{1}{2}\\mathbf{x}^T(2\\mathbf{A}^T\\mathbf{A})\\mathbf{x} - \\mathbf{x}^T(2\\mathbf{A}^T\\mathbf{b})+\\mathbf{b}^T\\mathbf{b}\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于二次函数 f,由于 $rank(\\mathbf{A})=n$，所以二次项是正定的。利用局部极小值的一阶必要条件，可求得 f 的唯一极小点，满足\n",
+    "\n",
+    "$$\\nabla f(\\mathbf{x}) = 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x} - 2\\mathbf{A}^T\\mathbf{b} = \\mathbf{0}$$\n",
+    "\n",
+    "该方程的唯一解为\n",
+    "\n",
+    "$$\\mathbf{x}^\\ast = (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{b}$$"
    ]
   },
   {
@@ -1108,6 +1336,18 @@
    "language": "python",
    "name": "python3"
   },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
    "autoclose": false,
@@ -1139,7 +1379,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "165px"
+    "width": "167px"
    },
    "toc_section_display": true,
    "toc_window_display": true
