--- a/CH03_线性回归.ipynb
+++ b/CH03_线性回归.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "现实任务中 $\\mathbf{X}^T\\mathbf{X}$ 往往不是满秩矩阵，比如许多任务中我们会遇到特征个数超过样例个数，导致 $\\mathbf{X}$ 列数多于行数，此时可以解出多个解都满足 MSE 最小化。可以通过引入正则化，由学习算法的归纳偏好来决定引入哪个解。\n",
+    "现实任务中 $\\mathbf{X}^T\\mathbf{X}$ 往往不是满秩矩阵，比如许多任务中我们会遇到特征个数超过样例个数，导致 $\\mathbf{X}$ 列数多于行数，此时可以解出多个解都满足 MSE 最小化。可以由学习算法的归纳偏好来决定引入哪个解，常见的做法是引入正则化。\n",
     "\n",
     "当矩阵过大时，求逆运算不是很容易，矩阵不可逆时，上述的最小二乘法求解最优参数是不可行的。所以我们通过如下的梯度下降迭代的方法寻找最佳参数。"
    ]
