最优化部分添加了切线法

--- a/CH00_数学公式.ipynb
+++ b/CH00_数学公式.ipynb
@@ -405,9 +405,9 @@
    "source": [
     "函数特点：\n",
     "\n",
-    "该函数在机器学习中 $g(-z)$ 会作为最原始的损失函数，如SVM中；在深度学习中会作为激活函数，被推荐用于大多数前馈神经网络激活函数。它用于将线性变换的输出将产生非线性变换。\n",
+    "在深度学习中会作为激活函数，被推荐用于大多数前馈神经网络激活函数。它用于将线性变换的输出将产生非线性变换。\n",
     "\n",
-    "函数非常接近于线性，可以看做具有两个线性部分的分段线性函数。因为几乎线性的性质，保留了很多以此作为激活函数的线性模型易于使用基于梯度方法进行优化的属性。"
+    "函数非常接近于线性，可以看做具有两个线性部分的分段线性函数。因为几乎线性的性质，以此作为激活函数的很多线性模型易于使用基于梯度方法进行优化。"
    ]
   },
   {
@@ -449,7 +449,7 @@
     "&P(y=1|x) = \\frac{e^{1\\cdot x}}{e^{1\\cdot x}+e^{0\\cdot x}}=\\frac{1}{1+e^{-x}}=\\sigma(x)\\\\\n",
     "&P(y=0|x) = \\frac{e^{0\\cdot x}}{e^{1\\cdot x}+e^{0\\cdot x}}=\\frac{1}{1+e^x}=\\sigma(-x)\n",
     "\\end{split}$$\n",
-    "我们会发现 sigmoid 函数可以看做服从 Bernoulli 分布的 $y=\\{0,1\\}$ 时的关于 x 的条件概率。分母的部分属于归一化部分，概率分布对应的构造函数为 $e^{yx}$, 我们可以统一表示服从Bernoulli 分布的概率函数为：\n",
+    "sigmoid 函数可以看做服从 Bernoulli 分布的 $y=\\{0,1\\}$ 时的关于 x 的条件概率。分母的部分属于归一化部分，概率分布对应的构造函数为 $e^{yx}$, 我们可以统一表示服从Bernoulli 分布的概率函数为：\n",
     "$$P(y=y_i|x)=\\sigma\\left((2y_i-1)x\\right)$$\n",
     "\n",
     "\n",
@@ -469,7 +469,7 @@
     "所以有 $\\frac{d\\sigma}{dx}\\rightarrow 0 \\; (|x|\\rightarrow \\infty)$\n",
     "\n",
     "\n",
-    "6. 如图所示以及上述第四点关于导数在正负无穷远处为零的性质可知：\n",
+    "6. 如图所示以及上述第5点关于导数在正负无穷远处为零的性质可知：\n",
     "\n",
     "    * **sigmoid 函数在变量趋于正负无穷时(实际操作中就是指取值的绝对值比较大时)会出现饱和(saturate)现象(导数等于0)，意味着函数会变得很平，并且对输入的微小改变不敏感。**\n",
     "    \n",
