--- a/CH02_最优化理论.ipynb
+++ b/CH02_最优化理论.ipynb
@@ -1327,6 +1327,320 @@
     "\\alpha_i g_i = 0\n",
     "\\end{aligned}\\right. \\tag{KKT}$$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Newton-Raphson切线法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "逐点线性化方法是构造迭代格式的重要方法。从几何上看，解方程 $f(x)=0$ 可以看做是求曲线 $y=f(x)$ 与 x 轴的交点。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**以直代曲**\n",
+    "\n",
+    "在任何一点x附近（特别当 x 靠近 $x^\\ast$ 的时候），曲线可以近似看做直线，从而可以**用线性方程近似代替曲线方程，用直线方程的根去近似曲线方程的根。这种以直线代替曲线，或以线性方程的根代替曲线方程的根的方法，就是求解各种非线性方程的一个最基本的原理，即所谓的“线性化”原理。**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面我们介绍切线法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "给定方程\n",
+    "\n",
+    "$$f(x)=0\\tag{QX}$$\n",
+    "\n",
+    "用迭代法求解（QX）归结为构造 $\\varphi(x)$,使相应迭代序列\n",
+    "\n",
+    "$$x_{k+1}=\\varphi(x_k)$$\n",
+    "\n",
+    "收敛于（QX）的解 $x^\\ast$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "设 f(x) 在 $x^\\ast$ 附近**二次连续可微(这个条件是为了保证收敛性)**，选 $x^\\ast$ 的一个近似 $x_0$，在 $x_0$ 点将 f(x) 展成 Taylor 级数\n",
+    "\n",
+    "$$f(x) = f(x_0) + f^{'}(x_0)(x-x_0) + \\frac{1}{2!}f^{''}(\\xi_0)(x-x_0)^2$$\n",
+    "\n",
+    "其中 $\\xi_0$ 是满足 $\\vert \\xi_0-x_0\\vert < \\vert x-x_0\\vert$ 的一点。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由于 $x_0$ 非常接近 $x^\\ast$，所以可以用线性方程来近似求解曲线方程 (QX)：\n",
+    "\n",
+    "$$f(x_0) + f^{'}(x_0)(x-x_0)=0$$\n",
+    "\n",
+    "\n",
+    "注：实际操作中，我们无法知道其是否非常接近真实解，所以起始点的选取要通过其他方法来判断，比如不要选在某个极值点，对应的一阶导为0，无法迭代下去。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "其解 \n",
+    "\n",
+    "$$x_1 = x_0 - \\frac{f(x_0)}{f^{'}(x_0)}$$\n",
+    "\n",
+    "可以看成对 $x^\\ast$ 新的近似。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如此继续下去，就可以得到切线法的迭代序列：\n",
+    "\n",
+    "$$x_{k+1} =x_k - (f^{'}(x_k))^{-1}f(x_k)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='figure/Newton-Raphson0.png' width='400' height='300' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面通过对比二分法和切线法来求解正整数 M 的平方根，即曲线方程为 $x^2-M=0$,要求解的精度也就是误差范围在 $10^{-4}$。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-14T08:12:45.883448Z",
+     "start_time": "2019-06-14T08:12:45.852446Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 二分法\n",
+    "\n",
+    "def split_into_two_sqrt(left,right, target, error):\n",
+    "    m = (left+right)/2.0\n",
+    "    err = m**2 - target\n",
+    "    count = 0\n",
+    "    while abs(err)> error:\n",
+    "        if err < 0:\n",
+    "            left = m\n",
+    "        else:\n",
+    "            right = m\n",
+    "        m = (left+right)/2.0\n",
+    "        err = m**2 - target\n",
+    "        count +=1\n",
+    "#     print('the result is {};run count is {}'.format(m,count))\n",
+    "    return m,count           "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Newton-Raphson切线法对应的迭代公式为：\n",
+    "\n",
+    "$x_{k+1} =x_k - \\frac{x_k^2\\;-M}{2x_k}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-14T08:12:47.901563Z",
+     "start_time": "2019-06-14T08:12:47.885562Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Newton-Raphson切线法\n",
+    "\n",
+    "def newton_raphson(begin,target,error):\n",
+    "    err = begin**2 - target\n",
+    "    count = 0\n",
+    "    while abs(err)> error:\n",
+    "        begin -= (begin**2 - target)/(2*begin)\n",
+    "        err = begin**2 - target\n",
+    "        count +=1\n",
+    "#     print('the result is {};run count is {}'.format(begin,count))\n",
+    "    return begin,count "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-14T08:22:56.031302Z",
+     "start_time": "2019-06-14T08:22:56.015301Z"
+    },
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result_list = []\n",
+    "target_list = [2**i for i in range(1,10)]\n",
+    "for i in target_list:\n",
+    "    begin,count_1 = newton_raphson(begin=i,target=i,error=10**(-8))\n",
+    "    x,count_2=split_into_two_sqrt(left=0,right=i-0.5, target=i,error=10**(-8))\n",
+    "    result_list.append([i,begin, count_1, count_2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-14T08:23:13.613279Z",
+     "start_time": "2019-06-14T08:23:13.592278Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>sqrt_result</th>\n",
+       "      <th>newton</th>\n",
+       "      <th>split_two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.414214</td>\n",
+       "      <td>4</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2.828427</td>\n",
+       "      <td>5</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>5.656854</td>\n",
+       "      <td>7</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>64</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>128</td>\n",
+       "      <td>11.313708</td>\n",
+       "      <td>8</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>256</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>512</td>\n",
+       "      <td>22.627417</td>\n",
+       "      <td>9</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target  sqrt_result  newton  split_two\n",
+       "0       2     1.414214       4         27\n",
+       "1       4     2.000000       5         27\n",
+       "2       8     2.828427       5         26\n",
+       "3      16     4.000000       6         31\n",
+       "4      32     5.656854       7         33\n",
+       "5      64     8.000000       7         30\n",
+       "6     128    11.313708       8         36\n",
+       "7     256    16.000000       8         30\n",
+       "8     512    22.627417       9         39"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.DataFrame(result_list, columns=['target','sqrt_result', 'newton', 'split_two'])"
+   ]
   }
  ],
  "metadata": {
@@ -1379,7 +1693,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "167px"
+    "width": "245px"
    },
    "toc_section_display": true,
    "toc_window_display": true
