--- a/CH04_逻辑回归.ipynb
+++ b/CH04_逻辑回归.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "通过对数几率回归的定义可知，实际上是_**用线性回归模型的预测结果去逼近真实标记的对数几率。因此，对应的模型称之为“对数几率回归”（logistic regression, 简称 LR）。虽然名字叫“回归”，但实际上是一个分类学习方法。**_\n",
     "\n",
-    "**当 $\\mathbf{w}^T\\mathbf{x} + b = 0$ 时，对应的$y=0.5, \\; 1-y=0.5$，恰好说明直线 $\\mathbf{w}^T\\mathbf{x} + b = 0$ 成为了正例和反例的概率分界线。**"
+    "**当 $\\mathbf{w}^T\\mathbf{x} + b = 0$ 时，对应的$y=0.5, \\; 1-y=0.5$，直线 $\\mathbf{w}^T\\mathbf{x} + b = 0$ 成为了正例和反例的概率分界线。**"
    ]
   },
   {
