--- a/CH06_决策树.ipynb
+++ b/CH06_决策树.ipynb
@@ -1058,12 +1058,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "回归树是针对连续型的训练样本，是一个预测新样本的值的外套。\n",
+    "回归树是针对目标值为连续型的训练样本，来预测新样本的值。\n",
     "\n",
-    "假设我们的训练数据有两个连续数值的特征，即样本向量为$(X_1, X_2, Y)$。下面左图是由两个特征组成的特征空间，我们采用二分法来讲特征空间分成不同的区域$R_i$。对于新的要预测样本，我们按照**特征划分顺序**和**特征最佳划分值**对新样本进行归类，并且将新样本所属区域的**一个特定常数**视为新样本的预测值。\n",
+    "假设我们的训练数据有两个连续数值的特征，即样本向量为$(X_1, X_2, Y)$。下面左图是由两个特征组成的特征空间，我们采用二分法来将特征空间分成不同的区域$R_i$。对于新的要预测样本，我们按照**特征划分顺序**和**特征最佳划分值**对新样本进行归类，并且将新样本所属区域的**一个特定常数**视为新样本的预测值。\n",
     "\n",
     "所以我们的重点是：\n",
-    "1. **通过递归的方法通过二分法来在每一次划分中选择最佳的划分属性及对应的属性划分值**；\n",
+    "1. **以递归的方法通过二分法来在每一次划分中选择最佳的划分特征及对应的特征划分值**；\n",
     "2. **迭代停止的条件**。"
    ]
   },
@@ -1123,8 +1123,8 @@
     "假设我们的优化目标是\n",
     "\n",
     "$$\\begin{split}\n",
-    "\\arg\\min_{\\{c_m\\}}J(\\{c_m\\}) = & \\arg\\min_{\\{c_m\\}}\\sum_{\\mathbf{x}\\in D}(y_i - f(\\mathbf{x}_i))^2\\\\\n",
-    "=& \\arg\\min_{\\{c_m\\}}\\sum_{\\mathbf{x}\\in D}\\left(y_i - \\sum_{m=1}^M c_m I(\\mathbf{x}_i\\in R_m)\\right)^2\n",
+    "\\arg\\min_{\\{c_m\\}}J(\\{c_m\\}) = & \\arg\\min_{\\{c_m\\}}\\sum_{\\mathbf{x}_i\\in D}(y_i - f(\\mathbf{x}_i))^2\\\\\n",
+    "=& \\arg\\min_{\\{c_m\\}}\\sum_{\\mathbf{x}_i\\in D}\\left(y_i - \\sum_{m=1}^M c_m I(\\mathbf{x}_i\\in R_m)\\right)^2\n",
     "\\end{split}$$"
    ]
   },
@@ -1136,7 +1136,7 @@
     "\n",
     "$$\\hat{c}_m = \\frac{\\sum_{\\mathbf{x}\\in R_m}y_i}{|R_m|}$$\n",
     "\n",
-    "其中 $|\\cdot|$ 表示集合的元素数量或者长度。"
+    "其中 $|\\cdot|$ 表示集合的元素个数。"
    ]
   },
   {
@@ -1150,9 +1150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在每一轮的迭代中，对于特征向量 X ，我们假设以第 j 个属性和该属性的值 s 来进行划分父样本空间。我们记被 $(j, s)$划分的两个半空间对为\n",
+    "在每一轮的迭代中，对于特征向量 $\\mathbf{x}$ ，我们假设以第 j 个属性和该属性的值 s 来进行划分父样本空间。我们记被 $(j, s)$划分的两个半空间对为\n",
     "\n",
-    "$$ R_1(j, s) = \\{X| X_j \\leq s\\} \\; and \\; R_2(j, s) = \\{X| X_j > s\\}$$"
+    "$$ R_1(j, s) = \\{\\mathbf{x}| \\mathbf{x}_{\\cdot j} \\leq s\\} \\; and \\; R_2(j, s) = \\{\\mathbf{x}| \\mathbf{x}_{\\cdot j}> s\\}$$"
    ]
   },
   {
@@ -1162,6 +1162,13 @@
     "我们的目标就是寻找最佳的 划分属性 j 和 属性值 s,等价于\n",
     "\n",
     "$$\\min_{(j,s)}\\left[\\min_{c_1}\\sum_{\\mathbf{x}_i \\in R_1(j,s)}(y_i - c_1)^2 + \\min_{c_2}\\sum_{\\mathbf{x}_i \\in R_2(j,s)}(y_i - c_2)^2\\right]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "备注：此处$\\mathbf{x}_i \\in R_1(j,s)$ 的含义是 $\\mathbf{x}_{ij} \\leq s$。"
    ]
   },
   {
