--- a/CH08_集成学习之理论.ipynb
+++ b/CH08_集成学习之理论.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**集成学习通常可以获得比单一学习器更显著卓越的泛化性能，这对“弱学习器”（泛化性能稍微好于50%的学习器）效果尤为明显。**因此很多集成学习的理论研究都是针对弱学习器来进行的，但实践上处于种种考虑，例如希望使用较少的个体学习器，往往会使用比较强的学习器。\n",
+    "**集成学习通常可以获得比单一学习器更显著卓越的泛化性能，这对“弱学习器”（泛化性能稍微好于50%的学习器）效果尤为明显。**因此很多集成学习的理论研究都是针对弱学习器来进行的，但实践上出于种种考虑，例如希望使用较少的个体学习器，往往会使用比较强的学习器。\n",
     "\n",
     "要获得好的集成，<span class=\"mark\">个体学习器应“好而不同”，即个体学习器要有一定的“准确性”，并且要有“多样性”，但两者一般情况下是冲突的</span>，如何平衡两者之间的冲突也是集成学习研究的核心。"
    ]
@@ -299,6 +299,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "所以在涉及到数据样本扰动的 Bagging 中，决策树被经常用来做基学习器，就是因为它属于不稳定学习器。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-05T05:50:30.031000Z",
@@ -315,7 +322,7 @@
    "source": [
     "从初始属性集中抽取若干个属性子集，再基于每一个属性子集训练一个基学习器，这是输入属性的扰动。**对包含大量属性的数据来说，进行输入属性扰动不仅能产生多样性大的个体，还会因属性的减少大幅节省时间开销；若数据属性比较少，不适合这种方法。**\n",
     "\n",
-    "随机子空间算法就依赖于输入属性扰动。"
+    "随机子空间算法和随机森林就依赖于输入属性扰动。"
    ]
   },
   {
@@ -348,89 +355,26 @@
    "source": [
     "基学习器一般都有参数需要设置，例如神经网络的隐层神经元数、初始连接权值等，通过随机设置不同的参数，往往可以产生差别较大的个体学习器。"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "在梯度下降法中，针对成本函数 $J(\\theta)$，求解$\\theta^{\\ast} = \\arg\\min_{\\theta}J(\\theta)$ 的梯度下降法公式为：\n",
-    "\n",
-    "$$\\theta_{j+1} = \\theta_j - \\alpha_{j+1} \\frac{\\partial J(\\theta)}{\\partial \\theta}|_{\\theta = \\theta_j}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "我们将上面对最佳参数的估计问题推广到函数空间对最佳逼近函数的估计问题。求解最佳逼近函数也是一个寻优过程，只是我们寻找的是最优函数估计，而不是最优点估计。\n",
-    "\n",
-    "给定数据集 $D = \\{ (\\mathbf{x}_1, y_1), (\\mathbf{x}_2, y_2), ... , (\\mathbf{x}_N, y_N)\\},$ 其中 $ \\mathbf{x}_i = (x_{i1}, x_{i2}, ...,x_{id})$,优化目标通常为：\n",
-    "\n",
-    "$$F^{\\ast}(\\mathbf{x}) = \\arg\\min_{F(\\mathbf{x})}\\sum_{i=1}^N L(y_i, F(\\mathbf{x}_i))$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "我们把 $F(\\mathbf{x})$ 视为参数 $\\theta$，则有\n",
-    "\n",
-    "$$F_{j+1}(\\mathbf{x}) = F_j(\\mathbf{x}) - \\rho_{j+1} \\frac{\\partial L}{\\partial F(\\mathbf{x}) }|_{F = F_j}$$\n",
-    "\n",
-    "其中$\\rho_{j+1}$ 对应的是这一轮的学习率。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "如果我们记\n",
-    "\n",
-    "$$g_j = \\frac{\\partial L}{\\partial F(\\mathbf{x}) }|_{F = F_j} \\quad and \\quad f_{j+1} = -\\rho_{j+1}g_j \\;(j\\geq 0) \\quad and \\quad F_0 = f_0$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "迭代次数为 m 时对应的集成\n",
-    "\n",
-    "$$\\begin{split}\n",
-    "F_m &= F_{m-1}- \\rho_m g_{m-1}\\\\\n",
-    "&= \\sum_{i=0}^{m-1}f_i + f_m \\\\\n",
-    "&= \\sum_{i=0}^{m}f_i\n",
-    "\\end{split}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "所以，我们的目标就是求解如下的一个集成学习模型：\n",
-    "\n",
-    "$$F^\\ast(\\mathbf{x}) = \\sum_{i=0}^{M}f_i(\\mathbf{x})$$\n",
-    "\n",
-    "其中每一轮的基学习器$f_i(\\mathbf{x})$ 学习的是截止到上一轮结束整个集成 $F_{m-1}(\\mathbf{x})$的损失函数的梯度。"
-   ]
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -463,7 +407,7 @@
     "height": "47px",
     "left": "1207px",
     "top": "110px",
-    "width": "422px"
+    "width": "190px"
    },
    "toc_section_display": true,
    "toc_window_display": true
