--- a/CH09_集成学习之Bagging族算法.ipynb
+++ b/CH09_集成学习之Bagging族算法.ipynb
@@ -344,7 +344,7 @@
     "随机森林（Random Forest）是 Bagging 的一个扩展变体。随机森林的个体学习器是决策树，但它的特点在于：\n",
     "\n",
     "1. 它不仅通过对样本集重新采样来进行集成学习；\n",
-    "2. 传统决策树在每个节点选择划分属性时是在当前节点的属性集合中选择一个最优属性不同，它是随机选择一个包含k个属性的子集，再从里面选择一个最优属性进行划分。k 控制了随机性的选择程度，假设样本一共有 d 个属性，一般情况下推荐 $k = \\log_2 d$。\n",
+    "2. 传统决策树在每个节点选择划分属性时是在当前节点的属性集合中选择一个最优属性不同，它是**随机选择一个包含k个属性的子集，再从里面选择一个最优属性进行划分**。k 控制了随机性的选择程度，假设样本一共有 d 个属性，一般情况下推荐 $k = \\log_2 d$。\n",
     "\n",
     "随机森林简单、容易实现，计算开销小，但是在很多现实任务中展现出很强大的性能，被誉为“代表集成学习技术水平的方法”。**RF的多样性不仅通过对样本扰动，还有属性扰动，这使得最终集成的泛化性能通过个体学习器之间差异度的增加而进一步提升，最大程度上降低了过拟合。**"
    ]
@@ -530,22 +530,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -578,7 +567,7 @@
     "height": "47px",
     "left": "1207px",
     "top": "110px",
-    "width": "422px"
+    "width": "203px"
    },
    "toc_section_display": true,
    "toc_window_display": true
