--- a/CH10_集成学习之Boosting族算法.ipynb
+++ b/CH10_集成学习之Boosting族算法.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "注2： 由 $\\alpha_t$ 的公式可知，误差率 $\\epsilon_t$ 越小，对应的集成学习中相应基学习器的系数越大，也就说，在AdaBoost中，让准确率更高的基学习器所起的作用越大。"
+    "注2： 由 $\\alpha_t$ 的公式可知，**误差率 $\\epsilon_t$ 越小，对应的集成学习中相应基学习器的系数越大，也就说，在AdaBoost中，让准确率更高的基学习器所起的作用越大。**"
    ]
   },
   {
@@ -329,7 +329,7 @@
     "\\frac{D_{t+1}(\\mathbf{x})}{D_t(\\mathbf{x})} &= \\frac{D(x) exp(-f(\\mathbf{x})H_{T}(\\mathbf{x}))}{ \\mathbf{E}_{\\mathbf{x}\\backsim D}[exp(-f(\\mathbf{x})H_{T}(\\mathbf{x}))]} \n",
     "\\frac{ \\mathbf{E}_{\\mathbf{x}\\backsim D}[exp(-f(\\mathbf{x})H_{T-1}(\\mathbf{x}))]}{D(x) exp(-f(\\mathbf{x})H_{T-1}(\\mathbf{x}))}\\\\\n",
     "&=exp \\left[f(\\mathbf{x})(H_{T-1}(\\mathbf{x}) - H_{T}(\\mathbf{x}))\\right]\\frac{1}{Z_t}\\\\\n",
-    "&=exp(-f(\\mathbf{x})\\alpha h_t(\\mathbf{x}))\\frac{1}{Z_t}\n",
+    "&=exp(-f(\\mathbf{x})\\alpha_t h_t(\\mathbf{x}))\\frac{1}{Z_t}\n",
     "\\end{split}$$"
    ]
   },
@@ -361,6 +361,18 @@
    "metadata": {},
    "source": [
     "<img src=\"figure/adaboost.png\" width=\"400\" hegiht=\"300\" align=left />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "备注：\n",
+    "\n",
+    "* 其中第3步是：基于分布 $D_t$ 的权重，从数据集 D 中采样出子集 $S_t$ 来训练出分类器 $h_t$；\n",
+    "\n",
+    "\n",
+    "* 关于第五步的 $\\epsilon_t > 0.5$：因为在第7步中，要通过 $\\alpha_t$ 来增加错误样本的权重 $exp(\\alpha_t)$同时减小正确样本的权重 $exp(-\\alpha_t)$，也就意味着 $\\alpha_t>0$，等价于 $\\epsilon >0.5$，即学习器的分类效果应该至少是好于随机猜测的；否则这一轮训练的基学习器要被丢弃，重新训练。"
    ]
   },
   {
@@ -516,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "与 AdaBoost 关注在上一轮学习中被基学习器错误分类的样本进而提升其权重、降低分类正确样本权重不同。Gredient Boosting Machine(简称 GBM)更关注截止到目前为止集成学习的错误，并对错误进行修正的一种提升方法。\n",
+    "与 AdaBoost 关注在上一轮学习中被基学习器错误分类的样本进而提升其采样权重、降低分类正确样本的采样权重不同。Gredient Boosting Machine(简称 GBM)更关注截止到目前为止集成学习的错误，并对错误进行修正的一种提升方法。\n",
     "\n",
     "下面的理论部分参考自：\n",
     "1. [Greedy Function Approximation: A Gradient Boosting Machine](https://statweb.stanford.edu/~jhf/ftp/trebst.pdf)\n",
@@ -627,8 +639,8 @@
     "假设可以交换微分积分顺序，则：\n",
     "\n",
     "$$\\begin{split}\n",
-    "g_m(\\mathbf{x}) &= \\left[\\frac{\\partial E_y(L(y, F(\\mathbf{x}))|\\mathbf{x})}{\\partial F(\\mathbf{x})}\\right]_{F(\\mathbf{x})=F_{m-1}(\\mathbf{x})}\\\\\n",
-    "&=E_y\\left[\\frac{\\partial (L(y, F(\\mathbf{x}))|\\mathbf{x})}{\\partial F(\\mathbf{x})}\\right]_{F(\\mathbf{x})=F_{m-1}(\\mathbf{x})}\n",
+    "g_m(\\mathbf{x}) &= \\left[\\frac{\\partial E_y(L(y, F(\\mathbf{x}))|\\mathbf{x})}{\\partial F(\\mathbf{x})}\\right]_{F(\\mathbf{x})=F_{m-1}\\;(\\mathbf{x})}\\\\\n",
+    "&=E_y\\left[\\frac{\\partial (L(y, F(\\mathbf{x}))|\\mathbf{x})}{\\partial F(\\mathbf{x})}\\right]_{F(\\mathbf{x})=F_{m-1}\\;(\\mathbf{x})}\n",
     "\\end{split}$$"
    ]
   },
@@ -673,7 +685,7 @@
    "source": [
     "则之前的优化问题可以转化为\n",
     "\n",
-    "$$\\{\\alpha_i,\\beta_i\\}_1^m = \\arg\\min_{\\{\\alpha_i^\\prime,\\beta_i^\\prime\\}_1^m}\\sum_{i=1}^N L\\left(y_i, \\sum_{i=1}^M \\beta_i^\\prime h(\\mathbf{x};\\alpha_i^\\prime)\\right)$$"
+    "$$\\{\\alpha_i,\\beta_i\\}_1^m = \\arg\\min_{\\{\\alpha_i^\\prime,\\beta_i^\\prime\\}_1^m}\\sum_{j=1}^N L\\left(y_j, \\sum_{i=1}^M \\beta_i^\\prime h(\\mathbf{x};\\alpha_i^\\prime)\\right)$$"
    ]
   },
   {
@@ -682,7 +694,7 @@
    "source": [
     "上面的求解还是复杂的，因为我们要一次性求出所有的$\\{\\alpha_i^\\prime,\\beta_i^\\prime\\}_1^m$，另外当加入新的基学习器时还要调整之前的基学习器。我们采用贪心思想的Greedy Stagewise方法：\n",
     "\n",
-    "$$(\\alpha_i,\\beta_i) = \\arg\\min_{\\alpha,\\beta}\\sum_{i=1}^N L\\left(y_i, F_{i-1}(\\mathbf{x}) +\\beta h(\\mathbf{x};\\alpha)\\right)$$\n",
+    "$$(\\alpha_i,\\beta_i) = \\arg\\min_{\\alpha,\\beta}\\sum_{j=1}^N L\\left(y_j, F_{i-1}(\\mathbf{x}) +\\beta h(\\mathbf{x};\\alpha)\\right)$$\n",
     "\n",
     "然后更新\n",
     "\n",
@@ -711,7 +723,7 @@
    "source": [
     "我们构建样本函数值$F(\\mathbf{x}_i)$的负梯度如下：\n",
     "\n",
-    "$$-g_m(\\mathbf{x}_i) = -\\left[\\frac{\\partial L(y_i, F(\\mathbf{x}_i))}{\\partial F(\\mathbf{x}_i)}\\right]_{F(\\mathbf{x})=F_{m-1}(\\mathbf{x})}$$"
+    "$$-g_m(\\mathbf{x}_i) = -\\left[\\frac{\\partial L(y_i, F(\\mathbf{x}_i))}{\\partial F(\\mathbf{x}_i)}\\right]_{F(\\mathbf{x})=F_{m-1}\\;(\\mathbf{x})}$$"
    ]
   },
   {
@@ -729,7 +741,7 @@
    "source": [
     "使用平方误差损失在样本上进行拟合：\n",
     "\n",
-    "$$\\alpha_m = \\arg\\min_{\\alpha,\\beta}\\sum_{i=1}^N\\left(-g_m(\\mathbf{x}_i) - \\beta h(\\mathbf{x};\\alpha_i)\\right)\\tag{fit-para}$$"
+    "$$\\alpha_m = \\arg\\min_{\\alpha,\\beta}\\sum_{i=1}^N\\left(-g_m(\\mathbf{x}_i) - \\beta h(\\mathbf{x};\\alpha_i)\\right)^2\\tag{fit-para}$$"
    ]
   },
   {
@@ -747,7 +759,7 @@
    "source": [
     "然后更新模型：\n",
     "\n",
-    "$$F_{m}(\\mathbf{x}) = F_{m-1}(\\mathbf{x}) + \\beta_m h(\\mathbf{x};\\alpha_m)$$"
+    "$$F_{m}(\\mathbf{x}) = F_{m-1}(\\mathbf{x}) + \\rho_m h(\\mathbf{x};\\alpha_m)$$"
    ]
   },
   {
@@ -1224,7 +1236,7 @@
     "height": "47px",
     "left": "1207px",
     "top": "110px",
-    "width": "222px"
+    "width": "208px"
    },
    "toc_section_display": true,
    "toc_window_display": true
