--- a/CH11_聚类.ipynb
+++ b/CH11_聚类.ipynb
@@ -109,10 +109,10 @@
     "对于 $S = \\{ C_1, C_2, ...,C_k\\}$，我们首先定义\n",
     "\n",
     "$$\\begin{split}\n",
-    "avg(C) &= \\frac{2}{|C|(|C|-1)}\\sum_{1 \\leq i<j\\leq |C|}dist(\\mathbf{x}_i, \\mathbf{x}_j)\\\\\n",
-    "diam(C) &= \\max_{1 \\leq i<j\\leq |C|}dist(\\mathbf{x}_i, \\mathbf{x}_j) \\\\\n",
-    "d_{\\min}( C_i, C_j) &= \\min_{\\mathbf{x}_i \\in C_i, \\mathbf{x}_j\\in C_j} dist(\\mathbf{x}_i, \\mathbf{x}_j)\\\\\n",
-    "d_{cen}( C_i, C_j) &= dist(\\mathbf{\\mu}_i, \\mathbf{\\mu}_j)\n",
+    "&avg(C) = \\frac{2}{|C|(|C|-1)}\\sum_{1 \\leq i<j\\leq |C|}dist(\\mathbf{x}_i, \\mathbf{x}_j)\\\\\n",
+    "&diam(C) = \\max_{1 \\leq i<j\\leq |C|}dist(\\mathbf{x}_i, \\mathbf{x}_j) \\\\\n",
+    "&d_{\\min}( C_i, C_j) = \\min_{\\mathbf{x}_i \\in C_i, \\mathbf{x}_j\\in C_j} dist(\\mathbf{x}_i, \\mathbf{x}_j)\\\\\n",
+    "&d_{cen}( C_i, C_j) = dist(\\mathbf{\\mu}_i, \\mathbf{\\mu}_j)\n",
     "\\end{split}$$\n",
     "\n",
     "其中 $dist(\\cdot,\\cdot)$ 用于计算两个样本之间的距离，度量方法我们下一节再介绍，$\\mu$ 表示簇 C 的中心点 $\\mu = \\frac{1}{|C|}\\sum_{1 \\leq i\\leq |C|}\\mathbf{x}_i$。"
@@ -1163,7 +1163,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "407.188px"
+    "width": "208.188px"
    },
    "toc_section_display": true,
    "toc_window_display": true
