--- a/CH00_数学公式.ipynb
+++ b/CH00_数学公式.ipynb
@@ -765,6 +765,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 常见损失函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " $\\ell_{0/1}$ 是“0/1损失函数”：\n",
+    "$$ \\ell_{0/1}(z)=\n",
+    "\\left \\{\n",
+    "\\begin{aligned}\n",
+    "1 & \\quad if \\; z<0;\\\\\n",
+    "0 & \\quad if \\; z\\geq 0;. \n",
+    "\\end{aligned}\\right.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "然而， $\\ell_{0/1}$ 非凸、非连续，不利于 (soft svm) 的求解，我们通常用如下三种“替代损失”来代替：\n",
+    "\n",
+    "1. hinge损失：$\\ell_{hinge}(z) = \\max(0, 1-z)$;\n",
+    "2. 指数损失（exponential loss）: $\\ell_{exp}(z) = \\exp(-z)$;\n",
+    "3. 对率损失（logistic loss）: $\\ell_{log}(z) = \\log(1+ \\exp(-z))$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://hacking-linux.com/wp-content/uploads/2018/08/28.png\" width=\"400\" hegiht=\"300\" align=left />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 数值计算\n",
     "\n",
     "部分内容来自于冯果忱主编的《数值分析(上册)》"
