--- a/CH06_决策树.ipynb
+++ b/CH06_决策树.ipynb
@@ -1214,7 +1214,7 @@
     "\n",
     "$$N_m = |\\mathbf{x}_i\\in R_m|$$\n",
     "\n",
-    "$$\\hat{c}_m = \\frac{\\sum_{\\mathbf{x}\\in R_m}y_i}{|R_m|}$$\n",
+    "$$\\hat{c}_m = \\frac{1}{N_m}\\sum_{\\mathbf{x}\\in R_m}y_i$$\n",
     "\n",
     "$$Q_m(T) = \\frac{1}{N_m}\\sum_{\\mathbf{x}\\in R_m}(y_i - \\hat{c}_m)^2$$\n",
     "\n",
@@ -1303,7 +1303,7 @@
     "height": "473px",
     "left": "1207px",
     "top": "134px",
-    "width": "165px"
+    "width": "199px"
    },
    "toc_section_display": true,
    "toc_window_display": true
