--- a/CH10_集成学习之Boosting族算法.ipynb
+++ b/CH10_集成学习之Boosting族算法.ipynb
@@ -1162,8 +1162,15 @@
    "source": [
     "以下内容参考自论文：\n",
     "1. [XGBoost](https://arxiv.org/pdf/1603.02754.pdf)\n",
-    "2. [LightGBM](https://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf)"
+    "2. [LightGBM](https://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf)\n",
+    "3. [XGBoost博客参考](http://gitlinux.net/2018-10-29-xgboost/)\n",
+    "4. [LightGBM博客参考](http://gitlinux.net/2019-07-05-lightgbm/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
